--- a/style.css
+++ b/style.css
@@ -39,3 +39,26 @@
   width: 100%;
   max-width: 560px;
 }
+
+.button-spillout {
+  position: absolute;
+  bottom: -1em;
+  right: 40%;
+  border: 2px solid var(--primary);
+  border-radius: 15%;
+  background-color: rgb(29, 199, 29);
+  color: blue;
+  padding: 0.25em;
+}
+
+.cards-col {
+  margin-bottom: -150px;
+}
+
+.card-spillout {
+  border: 4px solid var(--gray);
+}
+
+.card-ht {
+  height: 420px;
+}
