--- a/style.css
+++ b/style.css
@@ -61,5 +61,23 @@
 }
 
 .hr-margin {
-  margin: 150px;
+  margin-top: 250px;
+  margin-bottom: 100px;
+}
+
+.img-ht {
+  height: 200px;
+}
+
+.flexbox {
+  background-color: pink;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.flex-item {
+  width: 175px;
+  height: 175px;
+  background-color: grey;
+  margin: 10px auto;
 }
